--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+live-build (4.0~a10-1) experimental; urgency=low
+
+  * Removing superfluous menu default directive in installer syslinux
+    menues.
+  * Updating wheezy release number.
+  * Adding 3.0.1-1 changelog entries.
+
+ -- Daniel Baumann <daniel@debian.org>  Fri, 15 Feb 2013 09:00:52 +0100
+
 live-build (4.0~a9-1) experimental; urgency=low
 
   * Updating wheezy pre-release number for b4.
