Removing non-existent --apt-indices none references.

--- a/manpages/de/lb_config.de.1
+++ b/manpages/de/lb_config.de.1
@@ -3,7 +3,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-BUILD 1 18.02.2013 4.0~a12\-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 19.02.2013 4.0~a12\-1 "Debian Live Project"
 
 .SH NAME
 \fBlb config\fP \- Create config directory
@@ -20,7 +20,7 @@
 .br
   [\fB\-\-apt\-http\-proxy\fP \fIURL\fP]
 .br
-  [\fB\-\-apt\-indices\fP true|false|none]
+  [\fB\-\-apt\-indices\fP true|false]
 .br
   [\fB\-\-apt\-options\fP \fIOPTION\fP|"\fIOPTIONS\fP"]
 .br
