--- a/manpages/en/lb_config.1
+++ b/manpages/en/lb_config.1
@@ -1,4 +1,4 @@
-.TH LIVE\-BUILD 1 2013\-02\-18 4.0~a12-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 2013\-02\-19 4.0~a12-1 "Debian Live Project"
 
 .SH NAME
 \fBlb config\fR \- Create config directory
@@ -15,7 +15,7 @@
 .br
 	[\fB\-\-apt\-http\-proxy\fR \fIURL\fR]
 .br
-	[\fB\-\-apt\-indices\fR true|false|none]
+	[\fB\-\-apt\-indices\fR true|false]
 .br
 	[\fB\-\-apt\-options\fR \fIOPTION\fR|"\fIOPTIONS\fR"]
 .br
