--- a/manpages/en/lb_config.1
+++ b/manpages/en/lb_config.1
@@ -1,4 +1,4 @@
-.TH LIVE\-BUILD 1 2013\-01\-02 3.0~b5-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 2013\-02\-14 3.0.1-1 "Debian Live Project"
 
 .SH NAME
 \fBlb config\fR \- Create config directory
@@ -195,8 +195,6 @@
 .br
 	[\fB\-\-net\-tarball\fR true|false]
 .br
-	[\-p|\fB\-\-package\-lists\fR \fILIST\fR|\fI"LISTS"\fR]
-.br
 	[\fB\-\-quiet\fR]
 .br
 	[\fB\-\-root-command\fR sudo]
@@ -214,8 +212,6 @@
 	[\fB\-\-source\fR true|false]
 .br
 	[\-s|\fB\-\-source\-images\fR iso|netboot|tar|hdd]
-.br
-	[\fB\-\-syslinux\-theme\fR \fITHEME_SUFFIX\fR]
 .br
 	[\fB\-\-tasksel\fR apt|aptitude|tasksel]
 .br
@@ -434,10 +430,6 @@ Example:
 sets the IP or hostname that will be configured in the bootloader configuration for the copy\-on\-write filesystem of your netboot image and is by default empty.
 .IP "\fB\-\-net\-tarball\fR true|false" 4
 defines if a compressed tarball should be created. Disabling this options leads to no tarball at all, the plain binary directory is considered the output in this case. Default is true.
-.IP "\-p|\fB\-\-package\-lists\fR \fILIST\fR|""\fILISTS\fR""" 4
-defines which lists available in /usr/share/live/build/package-lists should be used. By default, this is set to standard. Note that in case you have local package lists, you don't need to list them here. Putting them into config/package-lists is enough (the filename needs to have the .list suffix though).
-.IP "\fB\-\-quiet\fR" 4
-reduces the verbosity of messages output by \fBlb build\fR.
 .IP "\fB\-\-archives\fR \fIARCHIVE\fR|""\fIARCHIVES\fR""" 4
 enables one of available third-party archive configurations in /usr/share/live/build/archives.
 .IP "\fB\-\-root-command\fR sudo" 4
@@ -462,8 +454,6 @@ defines if firmware packages should be automatically included into the live imag
 defines the path to a swap file to create in the binary image. Default is not to create a swap file.
 .IP "\fB\-\-swap\-file\-size\fR \fIMB\fR" 4
 defines what size in megabytes the swap file should be, if one is to be created. Default is 512MB.
-.IP "\fB\-\-syslinux\-theme\fR \fITHEME_SUFFIX\fR" 4
-defines the syslinux theme to use. The theme suffix is the name of a directory in /usr/share/syslinux/themes/ provided by a package named syslinux\-theme\- plus the suffix. In debian mode, this defaults to debian\-squeeze.
 .IP "\fB\-\-tasksel\fR apt|aptitude|tasksel" 4
 selects which program is used to install tasks. By default, this is set to tasksel.
 .IP "\fB\-\-templates\fR \fIPATH\fR" 4
