--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (3.0.1-1+kali1) kali; urgency=low
+
+  * Fix win32-loader.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Thu, 07 Mar 2013 21:53:48 +0100
+
 live-build (3.0.1-1) unstable; urgency=low
 
   * Removing superfluous menu default directive in installer syslinux
