Releasing debian version 4.0~a15-1.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+live-build (4.0~a15-1) experimental; urgency=low
+
+  * Removing all references to my old email address.
+
+ -- Daniel Baumann <mail@daniel-baumann.ch>  Sun, 10 Mar 2013 22:18:46 +0100
+
 live-build (4.0~a14-1) experimental; urgency=low
 
   [ Richard Nelson ]
