Debranding package for derivatives.

--- a/manpages/de/live-build.de.7
+++ b/manpages/de/live-build.de.7
@@ -3,10 +3,10 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-BUILD 7 10.03.2013 4.0~a15\-1 "Debian Live Project"
+.TH LIVE\-BUILD 7 11.03.2013 4.0~a15\-1 "Live Systems Project"
 
 .SH NAME
-\fBlive\-build\fP \- the Debian Live tool suite
+\fBlive\-build\fP \- the live systems tool suite
 
 .SH SYNOPSIS
 .\" FIXME
@@ -17,16 +17,16 @@
 
 .SH DESCRIPTION
 .\" FIXME
-live\-build is a set of scripts to build Debian Live system images. The idea
-behind live\-build is a tool suite that uses a configuration directory to
-completely automate and customize all aspects of building a Live image.
+live\-build is a set of scripts to build live system images. The idea behind
+live\-build is a tool suite that uses a configuration directory to completely
+automate and customize all aspects of building a Live image.
 .PP
 The \fICOMMAND\fP is a name of a live\-build command (see below).
 .PP
 .\" FIXME
 More documentation about how to use live\-build is available in the
 individual manpages for each helper and in the manual at
-<\fIhttp://live.debian.net/manual/\fP>.
+<\fIhttp://live\-systems.org/manual/\fP>.
 
 .SH OPTIONS
 .\" FIXME
@@ -271,16 +271,16 @@ also put comments in these files; lines beginning with "#" are ignored.
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found
-on the homepage at <\fIhttp://live.debian.net/\fP> and in the manual at
-<\fIhttp://live.debian.net/manual/\fP>.
+More information about live\-build and the Live Systems project can be found
+on the homepage at <\fIhttp://live\-systems.org/\fP> and in the manual
+at <\fIhttp://live\-systems.org/manual/\fP>.
 
 .SH BUGS
 Bugs can be reported by submitting a bugreport for the live\-build package in
-the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
-writing a mail to the Debian Live mailing list at
+the Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
+writing a mail to the Live Systems mailing list at
 <\fIdebian\-live@lists.debian.org\fP>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel\-baumann.ch\fP>
-for the Debian project.
+live\-build was written by Daniel Baumann
+<\fImail@daniel\-baumann.ch\fP>.
