--- a/manpages/en/lb_clean.1
+++ b/manpages/en/lb_clean.1
@@ -1,4 +1,4 @@
-.TH LIVE\-BUILD 1 2013\-03\-10 4.0~a15-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 2013\-03\-11 4.0~a15-1 "Live Systems Project"
 
 .SH NAME
 \fBlb clean\fR \- Clean build directory
@@ -7,7 +7,7 @@
 \fBlb clean\fR [\fIlive\-build options\fR]
 
 .SH DESCRIPTION
-\fBlb clean\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the Debian Live tool suite.
+\fBlb clean\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the live systems tool suite.
 .PP
 .\" FIXME
 \fBlb clean\fR is responsible for cleaning up after a system is built. It removes the build directories, and removes some other files including stage files, and any detritus left behind by other live\-build commands.
@@ -46,10 +46,10 @@ removes all source related caches, files, directories, and stage files.
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found on the homepage at <\fIhttp://live.debian.net/\fR> and in the manual at <\fIhttp://live.debian.net/manual/\fR>.
+More information about live\-build and the Live Systems project can be found on the homepage at <\fIhttp://live-systems.org/\fR> and in the manual at <\fIhttp://live-systems.org/manual/\fR>.
 
 .SH BUGS
-Bugs can be reported by submitting a bugreport for the live\-build package in the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Debian Live mailing list at <\fIdebian-live@lists.debian.org\fR>.
+Bugs can be reported by submitting a bugreport for the live\-build package in the Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Live Systems mailing list at <\fIdebian-live@lists.debian.org\fR>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR> for the Debian project.
+live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR>.
