--- a/manpages/en/live-build.7
+++ b/manpages/en/live-build.7
@@ -1,7 +1,7 @@
-.TH LIVE\-BUILD 7 2013\-03\-10 4.0~a15-1 "Debian Live Project"
+.TH LIVE\-BUILD 7 2013\-03\-11 4.0~a15-1 "Live Systems Project"
 
 .SH NAME
-\fBlive\-build\fR \- the Debian Live tool suite
+\fBlive\-build\fR \- the live systems tool suite
 
 .SH SYNOPSIS
 .\" FIXME
@@ -10,11 +10,11 @@
 
 .SH DESCRIPTION
 .\" FIXME
-live\-build is a set of scripts to build Debian Live system images. The idea behind live\-build is a tool suite that uses a configuration directory to completely automate and customize all aspects of building a Live image.
+live\-build is a set of scripts to build live system images. The idea behind live\-build is a tool suite that uses a configuration directory to completely automate and customize all aspects of building a Live image.
 .PP
 The \fICOMMAND\fR is a name of a live\-build command (see below).
 .PP
-More documentation about how to use live\-build is available in the individual manpages for each helper and in the manual at <\fIhttp://live.debian.net/manual/\fR>.
+More documentation about how to use live\-build is available in the individual manpages for each helper and in the manual at <\fIhttp://live-systems.org/manual/\fR>.
 .\" FIXME
 
 .SH OPTIONS
@@ -224,10 +224,10 @@ All config files are shell scripts which are sourced by a live\-build program. T
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found on the homepage at <\fIhttp://live.debian.net/\fR> and in the manual at <\fIhttp://live.debian.net/manual/\fR>.
+More information about live\-build and the Live Systems project can be found on the homepage at <\fIhttp://live-systems.org/\fR> and in the manual at <\fIhttp://live-systems.org/manual/\fR>.
 
 .SH BUGS
-Bugs can be reported by submitting a bugreport for the live\-build package in the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Debian Live mailing list at <\fIdebian-live@lists.debian.org\fR>.
+Bugs can be reported by submitting a bugreport for the live\-build package in the Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Live Systems mailing list at <\fIdebian-live@lists.debian.org\fR>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR> for the Debian project.
+live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR>.
