--- a/manpages/de/lb_config.de.1
+++ b/manpages/de/lb_config.de.1
@@ -3,7 +3,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-BUILD 1 10.03.2013 4.0~a15\-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 11.03.2013 4.0~a15\-1 "Live Systems Project"
 
 .SH NAME
 \fBlb config\fP \- Create config directory
@@ -234,7 +234,7 @@
 
 .SH DESCRIPTION
 \fBlb config\fP is a high\-level command (porcelain) of \fIlive\-build\fP(7), the
-Debian Live tool suite.
+live systems tool suite.
 .PP
 .\" FIXME
 \fBlb config\fP populates the configuration directory for live\-build. By
@@ -498,7 +498,7 @@ http://packages.qa.debian.org/live\-build", whereas VERSION is expanded to
 the version of live\-build that was used to build the image.
 .IP "\fB\-\-iso\-publisher\fP \fINAME\fP" 4
 sets the PUBLISHED field in the header of a resulting CD/DVD image. By
-default, this is set to 'Debian Live project; http:/live.debian.net/;
+default, this is set to 'Live Systems project; http:/live\-systems.org/;
 debian\-live@lists.debian.org'. Remember to change this to the appropriate
 values at latest when you distributing custom and unofficial images.
 .IP "\fB\-\-iso\-volume\fP \fINAME\fP" 4
@@ -765,16 +765,16 @@ LB_PARENT_MIRROR_BOOTSTRAP. This feature can be false by specifying the
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found
-on the homepage at <\fIhttp://live.debian.net/\fP> and in the manual at
-<\fIhttp://live.debian.net/manual/\fP>.
+More information about live\-build and the Live Systems project can be found
+on the homepage at <\fIhttp://live\-systems.org/\fP> and in the manual
+at <\fIhttp://live\-systems.org/manual/\fP>.
 
 .SH BUGS
 Bugs can be reported by submitting a bugreport for the live\-build package in
-the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
-writing a mail to the Debian Live mailing list at
+the Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
+writing a mail to the Live Systems mailing list at
 <\fIdebian\-live@lists.debian.org\fP>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel\-baumann.ch\fP>
-for the Debian project.
+live\-build was written by Daniel Baumann
+<\fImail@daniel\-baumann.ch\fP>.
