--- a/manpages/de/lb_source.de.1
+++ b/manpages/de/lb_source.de.1
@@ -3,7 +3,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-BUILD 1 10.03.2013 4.0~a15\-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 11.03.2013 4.0~a15\-1 "Live Systems Project"
 
 .SH NAME
 \fBlb source\fP \- Complete the source stage
@@ -13,7 +13,7 @@
 
 .SH DESCRIPTION
 \fBlb source\fP is a high\-level command (porcelain) of \fIlive\-build\fP(7), the
-Debian Live tool suite.
+live systems tool suite.
 .PP
 \fBlb source\fP calls all necessary live\-build programs in the correct order to
 complete the source stage.
@@ -32,16 +32,16 @@ options.
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found
-on the homepage at <\fIhttp://live.debian.net/\fP> and in the manual at
-<\fIhttp://live.debian.net/manual/\fP>.
+More information about live\-build and the Live Systems project can be found
+on the homepage at <\fIhttp://live\-systems.org/\fP> and in the manual
+at <\fIhttp://live\-systems.org/manual/\fP>.
 
 .SH BUGS
 Bugs can be reported by submitting a bugreport for the live\-build package in
-the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
-writing a mail to the Debian Live mailing list at
+the Bug Tracking System at <\fIhttp://bugs.debian.org/\fP> or by
+writing a mail to the Live Systems mailing list at
 <\fIdebian\-live@lists.debian.org\fP>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel\-baumann.ch\fP>
-for the Debian project.
+live\-build was written by Daniel Baumann
+<\fImail@daniel\-baumann.ch\fP>.
