--- a/manpages/en/lb_build.1
+++ b/manpages/en/lb_build.1
@@ -1,4 +1,4 @@
-.TH LIVE\-BUILD 1 2013\-03\-10 4.0~a15-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 2013\-03\-11 4.0~a15-1 "Live Systems Project"
 
 .SH NAME
 \fBlb build\fR \- Complete the bootstrap, chroot, binary, and source stages
@@ -7,7 +7,7 @@
 \fBlb build\fR [\fIlive\-build options\fR]
 
 .SH DESCRIPTION
-\fBlb build\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the Debian Live tool suite.
+\fBlb build\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the live systems tool suite.
 .PP
 \fBlb build\fR calls all necessary live\-build programs in the correct order to complete the bootstrap, chroot, binary, and source stages.
 
@@ -25,10 +25,10 @@
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found on the homepage at <\fIhttp://live.debian.net/\fR> and in the manual at <\fIhttp://live.debian.net/manual/\fR>.
+More information about live\-build and the Live Systems project can be found on the homepage at <\fIhttp://live-systems.org/\fR> and in the manual at <\fIhttp://live-systems.org/manual/\fR>.
 
 .SH BUGS
-Bugs can be reported by submitting a bugreport for the live\-build package in the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Debian Live mailing list at <\fIdebian-live@lists.debian.org\fR>.
+Bugs can be reported by submitting a bugreport for the live\-build package in the Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Live Systems mailing list at <\fIdebian-live@lists.debian.org\fR>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR> for the Debian project.
+live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR>.
