--- a/manpages/en/lb_config.1
+++ b/manpages/en/lb_config.1
@@ -1,4 +1,4 @@
-.TH LIVE\-BUILD 1 2013\-03\-10 4.0~a15-1 "Debian Live Project"
+.TH LIVE\-BUILD 1 2013\-03\-11 4.0~a15-1 "Live Systems Project"
 
 .SH NAME
 \fBlb config\fR \- Create config directory
@@ -227,7 +227,7 @@
 .\" FIXME
 
 .SH DESCRIPTION
-\fBlb config\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the Debian Live tool suite.
+\fBlb config\fR is a high\-level command (porcelain) of \fIlive\-build\fR(7), the live systems tool suite.
 .PP
 .\" FIXME
 \fBlb config\fR populates the configuration directory for live\-build. By default, this directory is named 'config' and is created in the current directory where \fBlb config\fR was executed.
@@ -342,7 +342,7 @@ sets the APPLICATION field in the header of a resulting CD/DVD image and default
 .IP "\fB\-\-iso\-preparer\fR \fINAME\fR" 4
 sets the PREPARER field in the header of a resulting CD/DVD image. By default this is set to "live\-build \fIVERSION\fR; http://packages.qa.debian.org/live\-build", whereas VERSION is expanded to the version of live\-build that was used to build the image.
 .IP "\fB\-\-iso\-publisher\fR \fINAME\fR" 4
-sets the PUBLISHED field in the header of a resulting CD/DVD image. By default, this is set to 'Debian Live project; http:/live.debian.net/; debian\-live@lists.debian.org'. Remember to change this to the appropriate values at latest when you distributing custom and unofficial images.
+sets the PUBLISHED field in the header of a resulting CD/DVD image. By default, this is set to 'Live Systems project; http:/live-systems.org/; debian\-live@lists.debian.org'. Remember to change this to the appropriate values at latest when you distributing custom and unofficial images.
 .IP "\fB\-\-iso\-volume\fR \fINAME\fR" 4
 sets the VOLUME field in the header of a resulting CD/DVD and defaults to '(\fIMODE\fR) (\fIDISTRIBUTION\fR) (\fIDATE\fR)' whereas MODE is expanded to the name of the mode in use, DISTRIBUTION the distribution name, and DATE with the current date and time of the generation.
 .IP "\fB\-\-jffs2\-eraseblock\fR \fISIZE\fR" 4
@@ -488,10 +488,10 @@ An optional, global configuration file for \fBlb config\fR variables. It is usef
 This program is a part of live\-build.
 
 .SH HOMEPAGE
-More information about live\-build and the Debian Live project can be found on the homepage at <\fIhttp://live.debian.net/\fR> and in the manual at <\fIhttp://live.debian.net/manual/\fR>.
+More information about live\-build and the Live Systems project can be found on the homepage at <\fIhttp://live-systems.org/\fR> and in the manual at <\fIhttp://live-systems.org/manual/\fR>.
 
 .SH BUGS
-Bugs can be reported by submitting a bugreport for the live\-build package in the Debian Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Debian Live mailing list at <\fIdebian\-live@lists.debian.org\fR>.
+Bugs can be reported by submitting a bugreport for the live\-build package in the Bug Tracking System at <\fIhttp://bugs.debian.org/\fR> or by writing a mail to the Live Systems mailing list at <\fIdebian-live@lists.debian.org\fR>.
 
 .SH AUTHOR
-live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR> for the Debian project.
+live\-build was written by Daniel Baumann <\fImail@daniel-baumann.ch\fR>.
