--- a/manpages/po/de/lb.1.po
+++ b/manpages/po/de/lb.1.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build 4.0~a15-1\n"
-"POT-Creation-Date: 2013-03-10 22:19+0100\n"
+"POT-Creation-Date: 2013-03-11 06:26+0100\n"
 "PO-Revision-Date: 2010-05-24 09:59+0300\n"
 "Last-Translator: Daniel Baumann <mail@daniel-baumann.ch>\n"
 "Language-Team: none\n"
@@ -28,8 +28,8 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/lb_testroot.1:1 en/live-build.7:1
 #, no-wrap
-msgid "2013-03-10"
-msgstr "10.03.2013"
+msgid "2013-03-11"
+msgstr "11.03.2013"
 
 #. type: TH
 #: en/lb.1:1 en/lb_binary.1:1 en/lb_bootstrap.1:1 en/lb_build.1:1
@@ -44,7 +44,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/lb_testroot.1:1 en/live-build.7:1
 #, no-wrap
-msgid "Debian Live Project"
+msgid "Live Systems Project"
 msgstr ""
 
 #. type: SH
@@ -89,8 +89,8 @@ msgstr ""
 #. type: Plain text
 #: en/lb.1:13
 msgid ""
-"B<lb> is a high-level command (porcelain) of I<live-build>(7), the Debian "
-"Live tool suite."
+"B<lb> is a high-level command (porcelain) of I<live-build>(7), the live "
+"systems tool suite."
 msgstr ""
 
 #. type: SH
@@ -159,9 +159,9 @@ msgstr ""
 #: en/lb_chroot.1:27 en/lb_clean.1:50 en/lb_config.1:492 en/lb_source.1:27
 #: en/lb_testroot.1:29 en/live-build.7:228
 msgid ""
-"More information about live-build and the Debian Live project can be found "
-"on the homepage at E<lt>I<http://live.debian.net/>E<gt> and in the manual at "
-"E<lt>I<http://live.debian.net/manual/>E<gt>."
+"More information about live-build and the Live Systems project can be found "
+"on the homepage at E<lt>I<http://live-systems.org/>E<gt> and in the manual "
+"at E<lt>I<http://live-systems.org/manual/>E<gt>."
 msgstr ""
 
 #. type: SH
@@ -178,8 +178,8 @@ msgstr ""
 #: en/lb_testroot.1:32 en/live-build.7:231
 msgid ""
 "Bugs can be reported by submitting a bugreport for the live-build package in "
-"the Debian Bug Tracking System at E<lt>I<http://bugs.debian.org/>E<gt> or by "
-"writing a mail to the Debian Live mailing list at E<lt>I<debian-live@lists."
+"the Bug Tracking System at E<lt>I<http://bugs.debian.org/>E<gt> or by "
+"writing a mail to the Live Systems mailing list at E<lt>I<debian-live@lists."
 "debian.org>E<gt>."
 msgstr ""
 
@@ -196,6 +196,5 @@ msgstr ""
 #: en/lb_chroot.1:32 en/lb_clean.1:55 en/lb_config.1:497 en/lb_source.1:32
 #: en/lb_testroot.1:34 en/live-build.7:233
 msgid ""
-"live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt> "
-"for the Debian project."
+"live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt>."
 msgstr ""
