--- a/manpages/pot/live-build.7.pot
+++ b/manpages/pot/live-build.7.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build VERSION\n"
-"POT-Creation-Date: 2013-03-10 22:19+0100\n"
+"POT-Creation-Date: 2013-03-11 06:26+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/lb_testroot.1:1 en/live-build.7:1
 #, no-wrap
-msgid "2013-03-10"
+msgid "2013-03-11"
 msgstr ""
 
 #. type: TH
@@ -45,7 +45,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/lb_testroot.1:1 en/live-build.7:1
 #, no-wrap
-msgid "Debian Live Project"
+msgid "Live Systems Project"
 msgstr ""
 
 #. type: SH
@@ -116,9 +116,9 @@ msgstr ""
 #: en/lb_chroot.1:27 en/lb_clean.1:50 en/lb_config.1:492 en/lb_source.1:27
 #: en/lb_testroot.1:29 en/live-build.7:228
 msgid ""
-"More information about live-build and the Debian Live project can be found "
-"on the homepage at E<lt>I<http://live.debian.net/>E<gt> and in the manual at "
-"E<lt>I<http://live.debian.net/manual/>E<gt>."
+"More information about live-build and the Live Systems project can be found "
+"on the homepage at E<lt>I<http://live-systems.org/>E<gt> and in the manual "
+"at E<lt>I<http://live-systems.org/manual/>E<gt>."
 msgstr ""
 
 #. type: SH
@@ -135,8 +135,8 @@ msgstr ""
 #: en/lb_testroot.1:32 en/live-build.7:231
 msgid ""
 "Bugs can be reported by submitting a bugreport for the live-build package in "
-"the Debian Bug Tracking System at E<lt>I<http://bugs.debian.org/>E<gt> or by "
-"writing a mail to the Debian Live mailing list at E<lt>I<debian-live@lists."
+"the Bug Tracking System at E<lt>I<http://bugs.debian.org/>E<gt> or by "
+"writing a mail to the Live Systems mailing list at E<lt>I<debian-live@lists."
 "debian.org>E<gt>."
 msgstr ""
 
@@ -153,8 +153,7 @@ msgstr ""
 #: en/lb_chroot.1:32 en/lb_clean.1:55 en/lb_config.1:497 en/lb_source.1:32
 #: en/lb_testroot.1:34 en/live-build.7:233
 msgid ""
-"live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt> "
-"for the Debian project."
+"live-build was written by Daniel Baumann E<lt>I<mail@daniel-baumann.ch>E<gt>."
 msgstr ""
 
 #. type: IP
@@ -193,7 +192,7 @@ msgstr ""
 
 #. type: Plain text
 #: en/live-build.7:5
-msgid "B<live-build> - the Debian Live tool suite"
+msgid "B<live-build> - the live systems tool suite"
 msgstr ""
 
 #.  FIXME
@@ -210,9 +209,9 @@ msgstr ""
 #. type: Plain text
 #: en/live-build.7:14
 msgid ""
-"live-build is a set of scripts to build Debian Live system images. The idea "
-"behind live-build is a tool suite that uses a configuration directory to "
-"completely automate and customize all aspects of building a Live image."
+"live-build is a set of scripts to build live system images. The idea behind "
+"live-build is a tool suite that uses a configuration directory to completely "
+"automate and customize all aspects of building a Live image."
 msgstr ""
 
 #. type: Plain text
@@ -225,8 +224,8 @@ msgstr ""
 #: en/live-build.7:19
 msgid ""
 "More documentation about how to use live-build is available in the "
-"individual manpages for each helper and in the manual at E<lt>I<http://live."
-"debian.net/manual/>E<gt>."
+"individual manpages for each helper and in the manual at E<lt>I<http://live-"
+"systems.org/manual/>E<gt>."
 msgstr ""
 
 #.  FIXME
