Removing dedicated emdebian mode, this can entirely be handled with different defaults.

--- a/manpages/de/lb_config.de.1
+++ b/manpages/de/lb_config.de.1
@@ -3,7 +3,7 @@
 .\" This file was generated with po4a. Translate the source file.
 .\"
 .\"*******************************************************************
-.TH LIVE\-BUILD 1 11.03.2013 4.0~a15\-1 "Live Systems Project"
+.TH LIVE\-BUILD 1 21.03.2013 4.0~a15\-1 "Live Systems Project"
 
 .SH NAME
 \fBlb config\fP \- Create config directory
@@ -178,7 +178,7 @@
 .br
   [\fB\-\-mirror\-debian\-installer\fP \fIURL\fP]
 .br
-  [\fB\-\-mode\fP debian|emdebian|progress\-linux|ubuntu]
+  [\fB\-\-mode\fP debian|progress\-linux|ubuntu]
 .br
   [\fB\-\-system\fP live|normal]
 .br
@@ -293,7 +293,7 @@ which require this are in violation of RFC 2068. By default, live\-build does
 not set this option.
 .IP "\fB\-\-apt\-recommends\fP true|false" 4
 defines if apt should install recommended packages automatically. By
-default, this is true except in emdebian mode.
+default, this is true.
 .IP "\fB\-\-apt\-secure\fP true|false" 4
 defines if apt should check repository signatures. This is true by default.
 .IP "\fB\-\-apt\-source\-archives\fP true|false" 4
@@ -489,8 +489,7 @@ default, this is of course false.
 defines options to pass to isohybrid.
 .IP "\fB\-\-iso\-application\fP \fINAME\fP" 4
 sets the APPLICATION field in the header of a resulting CD/DVD image and
-defaults to "Debian Live" in debian mode, and to "Emdebian Live" in emdebian
-mode, and "Ubuntu Live" in ubuntu mode.
+defaults to "Debian Live" in debian mode, and "Ubuntu Live" in ubuntu mode.
 .IP "\fB\-\-iso\-preparer\fP \fINAME\fP" 4
 sets the PREPARER field in the header of a resulting CD/DVD image. By
 default this is set to "live\-build \fIVERSION\fP;
@@ -618,7 +617,7 @@ end up configured in the final image.
 sets the location of the mirror that will be used to fetch the debian
 installer images of the derivative. By default, this points to the same
 mirror used to build the live system, i.e. the value of \-\-mirror\-bootstrap.
-.IP "\fB\-\-mode\fP debian|emdebian|progress|ubuntu" 4
+.IP "\fB\-\-mode\fP debian|progress|ubuntu" 4
 defines a global mode to load project specific defaults. By default this is
 set to debian.
 .IP "\fB\-\-system\fP live|normal" 4
@@ -632,9 +631,8 @@ sets additional options for mounting the root filesystem in netboot images
 and is by default empty.
 .IP "\fB\-\-net\-root\-path\fP \fIPATH\fP" 4
 sets the file path that will be configured in the bootloader configuration
-for your netboot image. This defaults to /srv/debian\-live in debian mode and
-to /srv/emebian\-live when being in emdebian mode, and /srv/ubuntu\-live when
-in ubuntu mode.
+for your netboot image. This defaults to /srv/debian\-live in debian mode,
+and /srv/ubuntu\-live when in ubuntu mode.
 .IP "\fB\-\-net\-root\-server\fP \fIIP\fP|\fIHOSTNAME\fP" 4
 sets the IP or hostname that will be configured in the bootloader
 configuration for the root filesystem of your netboot image. This defaults
