--- a/manpages/pot/lb_config.1.pot
+++ b/manpages/pot/lb_config.1.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-build VERSION\n"
-"POT-Creation-Date: 2013-03-11 06:26+0100\n"
+"POT-Creation-Date: 2013-03-21 17:35+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,7 +29,7 @@ msgstr ""
 #: en/lb_chroot.1:1 en/lb_clean.1:1 en/lb_config.1:1 en/lb_source.1:1
 #: en/lb_testroot.1:1 en/live-build.7:1
 #, no-wrap
-msgid "2013-03-11"
+msgid "2013-03-21"
 msgstr ""
 
 #. type: TH
@@ -592,7 +592,7 @@ msgstr ""
 
 #. type: Plain text
 #: en/lb_config.1:177
-msgid "  [B<--mode> debian|emdebian|progress-linux|ubuntu]"
+msgid "  [B<--mode> debian|progress-linux|ubuntu]"
 msgstr ""
 
 #. type: Plain text
@@ -875,7 +875,7 @@ msgstr ""
 #: en/lb_config.1:258
 msgid ""
 "defines if apt should install recommended packages automatically. By "
-"default, this is true except in emdebian mode."
+"default, this is true."
 msgstr ""
 
 #. type: IP
@@ -1484,8 +1484,8 @@ msgstr ""
 #: en/lb_config.1:342
 msgid ""
 "sets the APPLICATION field in the header of a resulting CD/DVD image and "
-"defaults to \"Debian Live\" in debian mode, and to \"Emdebian Live\" in "
-"emdebian mode, and \"Ubuntu Live\" in ubuntu mode."
+"defaults to \"Debian Live\" in debian mode, and \"Ubuntu Live\" in ubuntu "
+"mode."
 msgstr ""
 
 #. type: IP
@@ -1906,7 +1906,7 @@ msgstr ""
 #. type: IP
 #: en/lb_config.1:400
 #, no-wrap
-msgid "B<--mode> debian|emdebian|progress|ubuntu"
+msgid "B<--mode> debian|progress|ubuntu"
 msgstr ""
 
 #. type: Plain text
@@ -1965,9 +1965,8 @@ msgstr ""
 #: en/lb_config.1:410
 msgid ""
 "sets the file path that will be configured in the bootloader configuration "
-"for your netboot image. This defaults to /srv/debian-live in debian mode and "
-"to /srv/emebian-live when being in emdebian mode, and /srv/ubuntu-live when "
-"in ubuntu mode."
+"for your netboot image. This defaults to /srv/debian-live in debian mode, "
+"and /srv/ubuntu-live when in ubuntu mode."
 msgstr ""
 
 #. type: IP
