--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+live-build (3.0.5-1kali4) kali; urgency=medium
+
+  * Add the /usr/share/live/build/data/debian-cd/kali symlink that
+    is currently manually created by Kali's build_all.sh script.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Fri, 28 Mar 2014 17:09:43 +0100
+
 live-build (3.0.5-1kali3) kali; urgency=medium
 
   * Update default kernel flavours for armhf to match what's available with
