--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+live-build (3.0.5-1kali7) kali; urgency=medium
+
+  * Call binary_efi after binary_hooks to include the files after they have
+    been customized by the binary hooks.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Mon, 21 Jul 2014 23:20:58 +0200
+
 live-build (3.0.5-1kali6) kali; urgency=medium
 
   * Use the xorriso syntax that doesn't create a GPT but does create
